[vr] Don't show security indicators after hosted UI

When in WebVR presentation, if we transition to metaworld to accept a
permission, when we return we should not show the permissions.

Bug: 827304,827306
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I9280a04950dcc24f163be9f58fbf27c14c9ab6bd
Reviewed-on: https://chromium-review.googlesource.com/986290
Commit-Queue: Ian Vollick <vollick@chromium.org>
Reviewed-by: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547080}
Former-commit-id: c1116d78013a12411b24a929b2ba8f3d53bb1bf6